# kern-backend/services/organizations-service/src/domain/value-objects/organization-type.vo.ts
@@ -1,0 +1,4 @@
+export enum OrganizationType {
+  PERSONAL = 'PERSONAL',
+  TEAM = 'TEAM',
+}
